--- a/css/main.css
+++ b/css/main.css
@@ -56,8 +56,21 @@ div.login-form {
 }
 
 div.social-login {
+    position: relative;
+}
+
+span#or-text {
+    position: absolute;
+    top: 30px;
+    left: 8px;
+    font-size: 18px;
+    margin: 10px 0;
+}
+
+div.social-holder {
     border-left: 1px solid #ccc;
-    padding: 0px 30px;
+    margin-bottom: 15px;
+    padding: 0 30px;
 }
 
 .form-anchor {
@@ -109,7 +122,7 @@ a.social {
     border-color: rgba(0, 0, 0, 0.2);
     border-bottom-color: #333;
     border-bottom-color: rgba(0, 0, 0, 0.4);
-    margin: 20px 0;
+    margin: 10px 0;
     color: #fff;
     -moz-box-shadow: inset 0 0.08em 0 rgba(255, 255, 255, 0.4), inset 0 0 0.1em rgba(255, 255, 255, 0.9);
     -webkit-box-shadow: inset 0 0.08em 0 rgba(255, 255, 255, 0.4), inset 0 0 0.1em rgba(255, 255, 255, 0.9);
@@ -169,8 +182,9 @@ a.social.twitter {
 }
 
 a.social.twitter:before {
-    background-position: 0 11px;
-    ;
+    background-position: -15px 0px;
+    margin-left: -20px;
+    padding: 0 0.8em;
 }
 
 input[type="text"] + span,
@@ -241,12 +255,9 @@ a#play-btn {
 div.video-area {
     padding: 10px;
 }
-/*.register-text,#registerForm{
-    display:none;
-}*/
 
-.login-text,
-#loginForm {
+.register-text,
+#registerForm {
     display: none;
 }
 /*Lightbox css starts*/
